@@ -1,15 +1,24 @@
 {
-  "timestamp" : "2023-10-10T08:08:10Z",
+  "timestamp" : "2023-10-13T08:08:10Z",
   "count_outdated" : 211,
   "uniques_outdated" : 148,
-  "count" : 213,
-  "uniques" : 149,
+  "count" : 214,
+  "uniques" : 150,
   "clones" : [
     {
       "timestamp": "2023-10-10T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
